# snake

./: CMakeLists.txt
src/GameClient/: Game.cpp  GameClient.vcxproj  GameClient.vcxproj.filters  Window.cpp
src/GameClient/Engine/: Colour.h  IRender.h  TextAlignment.h
src/GameClient/Engine/Direct2D/: Direct2dColour.cpp  Direct2dEngine.cpp  Direct2dEngine.h
src/GameClient/GameObjects/: Snake.cpp  Snake.h
src/GameClient/State/: GameOverState.cpp  GameOverState.h  GameStateBase.cpp  GameStateBase.h  GameStateMachine.cpp  GameStateMachine.h  GameStates.h  IGameState.h  Playing.cpp  Playing.h  StartMenuState.cpp  StartMenuState.h
src/GameClient/UI/: Score.cpp  Score.h  Scoreboard.cpp  Scoreboard.h  StartMenu.cpp  StartMenu.h
src/GameClient/UI/Controls/: Button.cpp  Button.h  Label.cpp  Label.h
